tests/ui/g-roleprogram-witness-mismatch.stderr
error[E0308]: mismatched types
  --> tests/ui/g-roleprogram-witness-mismatch.rs:16:22
   |
16 |     expect_program_a(wrong);
   |     ---------------- ^^^^^ expected `1`, found `2`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `RoleProgram<'static, 0, ProgramWitness<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<1>, ()>>, StepNil>>>`
              found struct `RoleProgram<'static, 0, ProgramWitness<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<2>, ()>>, StepNil>>>`
note: function defined here
  --> tests/ui/g-roleprogram-witness-mismatch.rs:11:4
   |
11 | fn expect_program_a(_program: RoleProgram<'static, 0, ProgramWitness<ProgramASteps>>) {}
   |    ^^^^^^^^^^^^^^^^ ----------------------------------------------------------------
